Common - improve country info - backend